@@ -25,12 +25,21 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    plugins = ['java',"com.intellij.properties","com.intellij.java-i18n"]
+    plugins = ['java', "com.intellij.properties", "com.intellij.java-i18n"]
     version '2021.1'
     updateSinceUntilBuild false
 }
 patchPluginXml {
     changeNotes """
+
+    <h3>v1.1.0</h3>
+    <ul>
+        <li>support http request</li>
+        <li>support modify and add params</li>
+        <li>beautify ui</li>
+        <li>fix some bugs</li>
+    </ul>
+    
     <h3>v1.0.0</h3>
     <ul>
         <li>support Springmvc/SpringBoot</li>
@@ -41,4 +50,7 @@ patchPluginXml {
 }
 test {
     useJUnitPlatform()
+}
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
 }
